--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,12 +8,12 @@ on:
 
 env:
   RUBY_VERSION: 2.7.5
-  NODE_VERSION: 16.9.1
+  NODE_VERSION: 18.18.2
     
 jobs:
   lint:
     name: Lint code
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     if: "!startsWith(github.head_ref, 'chore/l10n')"
     steps:
       - uses: actions/checkout@v2.0.0
