--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -8,3 +8,5 @@
   - ["default", 1]
   - ["active_storage_analysis", 1]
   - ["active_storage_purge", 1]
+  - ["exports", 1]
+  - ["translations", 1]
